src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__parameter_expansion_length.snap
---
source: src/utils/parsers/bash/bash_parser.rs
expression: context
---
raw: "echo ${#var}"
children:
  - children:
      - name: echo
        args:
          - "${#var}"
        has_variable: true
