src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__substitution_in_piped_command.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: echo $(whoami) | head -1
children:
  - children:
      - name: echo
        args:
          - $(whoami)
        contains_substitution: true
      - name: whoami
        nesting:
          - Substitution
      - name: head
        args:
          - "-1"
